# updatepedals

./: .gitignore  manage.py  netlify.toml  package.json  pyproject.toml  requirements.txt  robots.txt  tailwind.config.js
functions/django/: index.py
guitar_pedals/: settings.py  settings_prod.py  urls.py  wsgi.py
netlify/functions/: django.py
pedal_database/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
pedals/: admin.py  apps.py  forms.py  models.py  sitemaps.py  urls.py  views.py
pedals/management/commands/: create_author.py  generate_meta_descriptions.py  generate_pedal_content.py  generate_sitemap.py  import_pedals.py
pedals/migrations/: 0001_initial.py  0002_author_alter_pedal_affiliate_link_and_more.py  0003_userrating.py  0004_add_review_to_slugs.py  0005_comment.py  0006_comment_rating.py  0007_pedal_meta_description_pedal_what_makes_it_bad_and_more.py  0008_author_updated_at_comment_updated_at_and_more.py  0009_pedal_specifications.py  0010_pedal_heading_best_for_pedal_heading_my_experience_and_more.py
pedals/static/css/: critical.css  manufacturer.css
pedals/templates/: about.html  base.html  privacy_policy.html  robots.txt
pedals/templates/guides/: are_pedals_necessary.html  guitar_pedal_chain.html  how_to_choose_guitar_pedals.html  pedals_for_beginners.html  what_are_guitar_pedals.html
pedals/templates/pedals/: about.html  base.html  contact.html  home.html  manufacturer_list.html  pedal_detail.html  pedal_detail.html.bak  pedal_list.html
pedals/templates/pedals/includes/: comments.html
static/: sitemap.xml  style.css
(+4 files in other folders)
