[tool.poetry]
name = "guitar-pedals"
version = "0.1.0"
description = "Guitar Pedals Database"

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.2.8"
whitenoise = "6.6.0"
aws-wsgi = "0.2.7"
Pillow = "10.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
